/*
 * Copyright 2020 The libeopp Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package eopp.test.identifier;

option java_package = "com.cgi.eoss.eopp.identifier";
option java_outer_classname = "IdentifierTestProto";
option java_multiple_files = true;

message IdentifierTestMessage {
    string identifier = 1;
    string version = 2;
}

message IdentifierTestMissingVersion {
    string identifier = 1;
    string not_a_version = 2;
}

message IdentifierTestMissingIdentifier {
    string not_an_identifier = 1;
    string version = 2;
}

message IdentifierTestMissingBoth {
    string not_an_identifier = 1;
    string not_a_version = 2;
}
